# md2electraone

./: .gitignore  AGENTS.md  NDLR MIDI.cleaned.md  NDLR_ElectraOne_Preset.json  NDLR_MIDI.cleaned.md  README.md  Subsequent 37 v1.1 NewIgnis.epr  Yamaha AN1X phase 3.epr  editor.json  micromonsta2.json  ndlr2-pretty.json  ndlr2.json  pyproject.toml  redshift6_cc_nrpn_map.csv  test_blank_rows.json  test_blank_rows.md  test_blank_rows_output5.md  test_default_values.json  test_group_explicit.json  test_group_explicit.md  test_group_explicit_roundtrip.md  test_group_multirow.json  test_group_multirow.md  test_group_multirow_output.md  test_group_multirow_roundtrip.md  test_group_noncontiguous.json  test_group_noncontiguous.md  test_group_noncontiguous_roundtrip.json  test_group_noncontiguous_roundtrip.md  test_group_noncontiguous_roundtrip_roundtrip.md  test_group_variant.json  test_group_variant.md  test_group_variant_output.md  test_group_variant_roundtrip.json  test_group_variant_roundtrip.md  test_message_types.json  test_modes.json  test_modes.md  test_modes_roundtrip.json  test_modes_roundtrip.md
.beads/: issues.jsonl
specs/: micromonsta2.json  micromonsta2.md  ndlr2.json  ndlr2.md  redshift6.json  redshift6.md  test.json  test.md
src/md2electraone/: __init__.py  __main__.py  controlspec.py  json2md.py  main.py  mdcleaner.py  mdparser.py  mdpreprocessor.py  mdutils.py  midiguide.py
tests/: __init__.py  conftest.py  test_json2md.py  test_midiguide.py  test_parser.py  test_roundtrip.py
tests/fixtures/: test_blank_rows_output.md  (+21 more)
utils/: validate_json.py
